--- a/docs/process_examples/master08-Covid19_severity.adoc
+++ b/docs/process_examples/master08-Covid19_severity.adoc
@@ -231,6 +231,9 @@ rules
             =====================
         ;
         
+    |
+    | Compute the qCSI score from vital signs sub-scores
+    |
     qCSI_score: Integer
         Result := heart_rate_score +
                 systolic_BP_score +
@@ -257,6 +260,9 @@ rules
             ============================
         ;
 
+    |
+    | Count demographic related risk factors
+    |
     risk_factors_demographic_count: Integer
         Result.add (
             ------------------------------------
@@ -266,6 +272,9 @@ rules
             ------------------------------------
         );
        
+    |
+    | Count medical / history related risk factors
+    |
     risk_factors_medical_count: Integer
         Result.add (
             --------------------------------------
@@ -278,11 +287,15 @@ rules
             BMI.bmi > 30                  ? 1 : 0,
             has_renal_disease             ? 1 : 0
             --------------------------------------
-        )
+        );
        
+    |
+    | Total pre-existing risk factors count
+    |
     risk_factors_count: Integer
         Result := risk_factors_demographic_count + 
                   risk_factors_medical_count
+        ;
                     
     |
     | ACEP step 3 assessment
@@ -315,16 +328,21 @@ rules
             TO BE COMPLETED
         ;
         
+    |
+    | Generate a % drop in SpO2 over 1 min sit/stand exertion test;
+    | NB: A fall in SpO2 generates a +ve result value.
+    |
     exertional_SpO2_drop: Quantity
-        Result := (SpO2_exertion_post - SpO2_exertion_reference)/SpO2_exertion_reference * 100
+        Result := (SpO2_exertion_reference - SpO2_exertion_post)/SpO2_exertion_reference * 100
+        ;
         
     exertional_SpO2_result: Terminology_code
         Result := case exertional_SpO2_drop in
-            ============================
+            ========================
             |< 3%|:   [normal],
-            ----------------------------
+            ------------------------
             |>= 3%|:  [mild_at_risk]
-            ============================
+            ========================
         ;
         
         
